# TensorRT-Quantization

./: .gitignore  README.md  export_detection.py
TensorRT-LLM/: .gitignore  README.md
deploy/: README.md
deploy/triton_server/: .gitignore  README.md  export_model.py  infer.py  run_server.py  run_server.sh
learning-cuda-trt10/: README.md
learning-cuda-trt10/cuda-driver-api-1.1-cuinit/src/: main.cpp
learning-cuda-trt10/cuda-driver-api-1.2-check1/src/: main.cpp
learning-cuda-trt10/cuda-driver-api-1.3-check2/: CMakeLists.txt
learning-cuda-trt10/cuda-driver-api-1.3-check2/src/: main.cpp
learning-cuda-trt10/cuda-driver-api-1.4-context/src/: main.cpp
learning-cuda-trt10/cuda-driver-api-1.5-memory-alloc/: CMakeLists.txt
learning-cuda-trt10/cuda-driver-api-1.5-memory-alloc/src/: main.cpp
learning-cuda-trt10/cuda-runtime-api-1.1-hello-runtime/: CMakeLists.txt
learning-cuda-trt10/cuda-runtime-api-1.1-hello-runtime/src/: main.cpp
learning-cuda-trt10/cuda-runtime-api-1.10-warpaffine/src/: affine.cu  main.cpp
learning-cuda-trt10/cuda-runtime-api-1.11-cublas-gemm/src/: main.cpp  segemm.cu
learning-cuda-trt10/cuda-runtime-api-1.12-yolov5-postprocess/: CMakeLists.txt
learning-cuda-trt10/cuda-runtime-api-1.12-yolov5-postprocess/src/: box.hpp  gpu_decode.cu  main.cpp
learning-cuda-trt10/cuda-runtime-api-1.13-thrust/: CMakeLists.txt
learning-cuda-trt10/cuda-runtime-api-1.13-thrust/src/: main.cu
learning-cuda-trt10/cuda-runtime-api-1.14-error/src/: main.cu
learning-cuda-trt10/cuda-runtime-api-1.15-bank-conflict/: profile.sh
learning-cuda-trt10/cuda-runtime-api-1.15-bank-conflict/src/: reduce-sum.cu
learning-cuda-trt10/cuda-runtime-api-1.2-memory/src/: main.cpp
learning-cuda-trt10/cuda-runtime-api-1.3-stream/: CMakeLists.txt
learning-cuda-trt10/cuda-runtime-api-1.3-stream/src/: main.cpp
learning-cuda-trt10/cuda-runtime-api-1.4-kernel-function/: CMakeLists.txt
learning-cuda-trt10/cuda-runtime-api-1.4-kernel-function/src/: kernel.cu  main.cpp
learning-cuda-trt10/cuda-runtime-api-1.5-thread-layout/: CMakeLists.txt
learning-cuda-trt10/cuda-runtime-api-1.5-thread-layout/src/: limit-test.cu  main.cpp
learning-cuda-trt10/cuda-runtime-api-1.5.2-parallel/: CMakeLists.txt
learning-cuda-trt10/cuda-runtime-api-1.5.2-parallel/src/: main.cu
learning-cuda-trt10/cuda-runtime-api-1.6-vector-add/src/: kernel.cu  main.cpp
learning-cuda-trt10/cuda-runtime-api-1.7-shared-memory/: CMakeLists.txt
learning-cuda-trt10/cuda-runtime-api-1.7-shared-memory/src/: main.cpp  shared-memory.cu
learning-cuda-trt10/cuda-runtime-api-1.8-reduce-sum/src/: main.cpp  reduce-sum.cu
learning-cuda-trt10/cuda-runtime-api-1.9-atomic/: CMakeLists.txt
learning-cuda-trt10/cuda-runtime-api-1.9-atomic/src/: atomic.cu  main.cpp
learning-cuda-trt10/tensorrt-basic-1.1-hello-tensorrt/src/: main.cpp
learning-cuda-trt10/tensorrt-basic-1.2-hello-inference/: CMakeLists.txt
learning-cuda-trt10/tensorrt-basic-1.2-hello-inference/src/: main.cpp
learning-cuda-trt10/tensorrt-basic-1.5-onnx-parser/src/: main.cpp
learning-cuda-trt10/tensorrt-basic-1.6-onnx-parser-source-code/: CMakeLists.txt
learning-cuda-trt10/tensorrt-basic-1.6-onnx-parser-source-code/onnx/: make_pb.sh  onnx-ml.proto  onnx-operators-ml.proto
learning-cuda-trt10/tensorrt-basic-1.6-onnx-parser-source-code/src/: CMakeLists.txt  main.cpp
learning-cuda-trt10/tensorrt-basic-1.6-onnx-parser-source-code/src/onnx-tensorrt-release-10.8-GA/: CMakeLists.txt  ConditionalHelpers.cpp  ConditionalHelpers.hpp  LoopHelpers.cpp  ModelImporter.cpp  ModelImporter.hpp  ModelRefitter.cpp  NvOnnxParser.h  OnnxAttrs.cpp  RNNHelpers.hpp  Status.hpp  TensorOrWeights.cpp  errorHelpers.hpp  importerUtils.cpp  importerUtils.hpp  onnxOpCheckers.cpp  onnxOpImporters.cpp
learning-cuda-trt10/tensorrt-basic-1.7-hello-plugin/: CMakeLists.txt  gen-onnx.py  infer.py  readme.md
learning-cuda-trt10/tensorrt-basic-1.7-hello-plugin/src/: main.cpp  myselu-kernel.cu  myselu-plugin.cpp  myselu-plugin.hpp
learning-cuda-trt10/tensorrt-basic-1.9-int8/: CMakeLists.txt
learning-cuda-trt10/tensorrt-basic-1.9-int8/src/: main.cpp
learning-cuda-trt10/tensorrt-integrate-1.1-full-cnn-classifier/src/: main.cpp
learning-cuda-trt10/tensorrt-integrate-1.11-onnxruntime/: CMakeLists.txt
learning-cuda-trt10/tensorrt-integrate-1.11-onnxruntime/src/: main.cpp
learning-cuda-trt10/tensorrt-integrate-1.12-multithread/: CMakeLists.txt
learning-cuda-trt10/tensorrt-integrate-1.12-multithread/src/: condition_variable.cpp  future_test.cpp  infer.cpp  infer.hpp  main.cpp
learning-cuda-trt10/tensorrt-integrate-1.2-yolov5-detect/src/: main.cpp
learning-cuda-trt10/tensorrt-integrate-1.3-yolox-detect/src/: main.cpp
learning-cuda-trt10/tensorrt-integrate-1.4-retinaface-detect/Pytorch_Retinaface-master/: convert_to_onnx.py
learning-cuda-trt10/tensorrt-integrate-1.5-unet/src/: main.cpp
learning-cuda-trt10/tensorrt-integrate-1.7-huggingface-ner/: export-ner.py
learning-cuda-trt10/tensorrt-integrate-1.8-alphapose/: predict.sh
learning-trt10-py/: README.md  part1-export-onnx.py  part2-Symmetric_quantization.py  part3-Asymmetric_dequantize.py  part4-Kl.py  part5-TensorRT-KL.py
object_detection/YOLOv8/: README.md
object_detection/YOLOv8/calibration/: CMakeLists.txt  README.md  calibrate.cu  calibrate.py  calibrator.cpp  calibrator.h  yolov8_utils.cpp  yolov8_utils.h
object_detection/YOLOv8/end2end/: CMakeLists.txt  README.md  main.cpp
object_detection/YOLOv8/end2end/include/: yolov8.h
(+50 files in other folders)
